ingress/infra/k8s/auth-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      name: auth-postgres
  template:
    metadata:
      name: auth-postgres
      labels:
        name: auth-postgres
    spec:
      containers:
        - name: hellotwo
          image: postgres:12-alpine
          ports:
            - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector:
    app: auth-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
