ingress/infra/k8s/two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-two
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hello-two
  template:
    metadata:
      name: hello-two
      labels:
        name: hello-two
    spec:
      containers:
        - name: hellotwo
          image: elangreza14/hellotwo
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: hello-two-service
spec:
  selector:
    name: hello-two
  ports:
    - port: 8000
      targetPort: 8000
