ingress/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-example
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: go.elangreza14.internal
    http:
      paths:
      - path: /one/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 8000
      # - path: /two/?(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: hello-two-service
      #       port:
      #         number: 8000
